<resources>
    <string name="app_name">Grocery Comparator</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="sign_up">Sign up!</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="add">Add</string>
    <string name="apples_bananas_cakes_etc">apples, bananas, cakes, etc</string>
    <string name="product">product</string>
    <string name="button">Button</string>
    <string name="delete">Delete</string>
    <string name="comparelist">compareList</string>
    <string name="compareList" />
    <string name="text">text</string>
    <string name="query">Query</string>
    <string name="item_name">item Name</string>
    <string name="price">price</string>
    <string name="log_out">Log Out</string>
    <string name="titleBar">Your grocery list</string>
</resources>